--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -75,56 +75,56 @@
 
 
 
-    <Button android:id="@+id/button_composer_sleep"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_sleep"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_sleep"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_sleep"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true">-->
+    <!--</Button>-->
 
-    <Button android:id="@+id/button_composer_thought"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_thought"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_sleep">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_thought"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_thought"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_sleep">-->
+    <!--</Button>-->
 
-    <Button android:id="@+id/button_composer_music"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_music"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_music"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_music"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true">-->
+    <!--</Button>-->
 
-    <Button android:id="@+id/button_composer_place"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_place"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_music">
-    </Button>
-
-
-    <Button android:id="@+id/button_composer_with"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_with"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_place">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_place"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_place"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_music">-->
+    <!--</Button>-->
 
 
-    <Button android:id="@+id/button_composer_camera"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/composer_camera"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_with">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_with"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_with"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_place">-->
+    <!--</Button>-->
 
 
-    <Button android:id="@+id/button_friends_delete"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:background="@mipmap/friends_delete"
-        android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"
-        android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_camera">
-    </Button>
+    <!--<Button android:id="@+id/button_composer_camera"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/composer_camera"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_with">-->
+    <!--</Button>-->
+
+
+    <!--<Button android:id="@+id/button_friends_delete"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:background="@mipmap/friends_delete"-->
+        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_camera">-->
+    <!--</Button>-->
 
 </RelativeLayout>
