--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
@@ -2,56 +2,67 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     >
     <LinearLayout
-        android:layout_width="793dp"
-        android:layout_height="366dp"
-        android:gravity="center"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="107dp"
-            android:gravity="center"
-            android:text="@string/add_area"
-            android:textSize="29sp"
-            />
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="94dp"
-            android:layout_marginLeft="65dp"
-            android:layout_marginRight="65dp"
-            android:textColor="#000000"
-            android:paddingLeft="50dp"
-            android:textSize="27sp"
-            android:textColorHint="#7D7D7D"
-            />
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="87dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="40dp"
         android:layout_weight="1"
-        >
-        <Button
-            android:id="@+id/positiveButton"
-            android:layout_width="296dp"
-            android:layout_height="87dp"
-            android:layout_marginLeft="65dp"
-            android:background="@animator/btn_selector"
-            android:text="@string/btn_sure"
-            />
-        <Button
-            android:id="@+id/negativeButton"
-            android:layout_width="296dp"
-            android:layout_height="87dp"
-            android:background="@animator/btn_selector"
-            android:layout_marginLeft="78dp"
-            android:layout_marginRight="65dp"
-            android:layout_alignParentRight="true"
-            android:text="@string/btn_cancle"
-            />
-    </RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/add_area"
+                android:textSize="29sp"
+                android:layout_weight="1"
+                />
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#000000"
+                android:textSize="27sp"
+                android:textColorHint="#7D7D7D"
+                android:layout_weight="1"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                >
+                <Button
+                    android:id="@+id/positiveButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@animator/btn_selector"
+                    android:text="@string/btn_sure"
+                    android:layout_weight="1"
+                    />
+                <Button
+                    android:id="@+id/negativeButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@animator/btn_selector"
+                    android:text="@string/btn_cancle"
+                    android:layout_weight="1"
+                    />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
