--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
@@ -22,6 +23,32 @@
     </RelativeLayout>
     <LinearLayout
         android:layout_below="@+id/main"
+        android:id="@+id/robotList"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="100dp">
+        <HorizontalScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                >
+                <GridView
+                    android:id="@+id/robotgirdview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:numColumns="auto_fit"
+                    android:stretchMode="spacingWidthUniform" >
+                </GridView>
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/robotList"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,7 +66,7 @@
             />
     </LinearLayout>
     <RelativeLayout
-        android:layout_below="@+id/main"
+        android:layout_below="@+id/robotList"
         android:id="@+id/map_right_Ralative"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,55 +103,55 @@
 
 
     <!--<Button android:id="@+id/button_composer_sleep"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_sleep"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_sleep"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true">-->
     <!--</Button>-->
 
     <!--<Button android:id="@+id/button_composer_thought"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_thought"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_sleep">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_thought"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_sleep">-->
     <!--</Button>-->
 
     <!--<Button android:id="@+id/button_composer_music"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_music"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_music"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true">-->
     <!--</Button>-->
 
     <!--<Button android:id="@+id/button_composer_place"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_place"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_music">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_place"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_music">-->
     <!--</Button>-->
 
 
     <!--<Button android:id="@+id/button_composer_with"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_with"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_place">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_with"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_place">-->
     <!--</Button>-->
 
 
     <!--<Button android:id="@+id/button_composer_camera"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/composer_camera"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_with">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/composer_camera"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_with">-->
     <!--</Button>-->
 
 
     <!--<Button android:id="@+id/button_friends_delete"-->
-        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:background="@mipmap/friends_delete"-->
-        <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
-        <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_camera">-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+    <!--android:background="@mipmap/friends_delete"-->
+    <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
+    <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_camera">-->
     <!--</Button>-->
 
 </RelativeLayout>
