--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,14 @@
             android:textColor="@color/black"
             android:text="@string/main"
             />
+        <Button
+            android:id="@+id/config_redact"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/config_redact"
+            android:layout_alignParentRight="true"
+            />
     </RelativeLayout>
     <LinearLayout
         android:layout_below="@+id/main"
