--- a/LaserRadar/Robot/app/src/main/res/layout/item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item.xml
@@ -17,5 +17,6 @@
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         />
 </LinearLayout>
