--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,13 @@
         android:background="@color/darkkhaki"
         android:layout_width="match_parent"
         android:layout_height="60dp">
+        <ImageView
+            android:id="@+id/imgViewmapnRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:background="@mipmap/zuo_yc"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,6 +39,7 @@
     <LinearLayout
         android:layout_below="@+id/main"
         android:id="@+id/robotList"
+        android:layout_toRightOf="@+id/map_right_Ralative"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="100dp">
@@ -54,16 +62,19 @@
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
-
-    <LinearLayout
+    <View
         android:layout_below="@+id/robotList"
+        android:id="@+id/view"
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"/>
+    <LinearLayout
+        android:layout_toRightOf="@+id/map_right_Ralative"
+        android:layout_below="@+id/view"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        >
         <GridView
             android:id="@+id/gview"
             android:layout_width="match_parent"
@@ -74,21 +85,12 @@
             />
     </LinearLayout>
     <RelativeLayout
-        android:layout_below="@+id/robotList"
+        android:layout_below="@+id/main"
         android:id="@+id/map_right_Ralative"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         android:layout_alignParentLeft="true">
-        <ImageView
-            android:id="@+id/imgViewmapnRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/linearlayout_all"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="27dp"
-            android:background="@mipmap/zuo_yc"
-            />
         <LinearLayout
             android:id="@+id/linearlayout_all"
             android:layout_width="100dp"
