--- a/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
@@ -8,12 +8,21 @@
     <ImageView
         android:src="@mipmap/ic_launcher"
         android:id="@+id/imageview"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         />
     <TextView
+        android:id="@+id/name"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+    <View
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"/>
+    <TextView
         android:id="@+id/text"
-        android:layout_marginTop="5dp"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
